<resources>
    <string name="app_name">Habits</string>
    <string name="push_the_button_max">Не дави на меня</string>
    <string name="check_habit">Выбрать привычку</string>
    <string name="my_habits">Мои привычки</string>
    <string name="add_habit">Добавить привычку</string>
    <string name="period_string">%1$s раз в %2$s дней</string>
    <string name="good_habit">Хорошая привычка</string>
    <string name="bad_habit">Плохая привычка</string>
    <string name="create_habit">Создать привычку</string>
    <string name="habit_name">Название</string>
    <string name="habit_description">Описание</string>
    <string name="habit_type">Тип привычки</string>
    <string name="habit_priority">Приоритет</string>
    <string name="habit_period">Периодичность</string>
    <string name="repeat">Повторять</string>
    <string name="times">раз</string>
    <string name="days">дней</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="save">Сохранить</string>
    <string name="fill_in_required_fields">Заполните недостающие поля</string>
    <string name="habit_added">Привычка добавлена</string>
    <string name="cancel">Отменить</string>
    <string name="habit_edited">Привычка изменена</string>
    <string name="rgb_string">R:%1$s | G:%2$s | B:%3$s</string>
    <string name="hsv_string">H:%1$s | S:%2$s%% | V:%3$s%%</string>
    <string name="navigation_open">open</string>
    <string name="navigation_close">close</string>
    <string name="good">Хорошие</string>
    <string name="bad">Плохие</string>

    <!-- spinners data -->
    <string-array name="prioritySpinnerDataArray">
        <item>@string/high_priority</item>
        <item>@string/medium_priority</item>
        <item>@string/low_priority</item>
    </string-array>

    <string-array name="sortingSpinnerDataArray">
        <item> <string name="priority_sort">По приоритету</string> </item>
        <item> <string name="name_sort">По названию</string> </item>
    </string-array>

    <!-- Application Info Fragment -->
    <string name="app_title">Название</string>
    <string name="app_version">Версия</string>
    <string name="app_developer">Разработчик</string>
    <string name="developer_name_value">Черняк А.О.</string>
    <string name="app_version_value">hw_9</string>
    <string name="app_title_value">Мои привычки</string>
    <string name="avatar">Аватар</string>
    <string name="habits_list">Список привычек</string>
    <string name="application_info">Информация о приложении</string>
    <string name="search_and_sorting">Поиск и сортировка</string>
    <string name="search">Поиск…</string>
    <string name="high_priority">Высокий</string>
    <string name="medium_priority">Средний</string>
    <string name="low_priority">Низкий</string>

</resources>